--- a/js-projects/odin-tictactoe/index.html
+++ b/js-projects/odin-tictactoe/index.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TTT</title>
     <link rel="stylesheet" href="./styles.css">
-    <script src="./script.js" defer></script>
+    <script src="./script2.js" defer></script>
 </head>
 <body>
-    <button id="start-btn">start</button>
+    <h1 id="title">Tic Tac Toe</h1>
+    <div id="gameboard"></div>
+    <div id="control">
+        <input type="text" id="player1" placeholder="Player 1 Name">
+        <input type="text" id="player2" placeholder="Player 2 Name">
+        <button id="start-button">Start Game</button>
+        <button id="restart-button">Restart Game</button>
+    </div>
+    <div id="message"></div>
+    <div id="result-display"></div>
 </body>
 </html>
